forms/form_tests/src/tests/compiles/unimplemented_compound.stderr
error[E0277]: the trait bound `Child: form_model::Form` is not satisfied
  --> $DIR/unimplemented_compound.rs:18:10
   |
18 | #[derive(Form)]
   |          ^^^^ the trait `form_model::Form` is not implemented for `Child`
   |
   = note: required by `form_model::Form::__assert_receiver_is_total_form`
